<resources>
    <string name="app_name">Bella Shade Finder</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="order_list">Order List</string>
    <string name="product_list">Product List</string>
    <string name="is_admin">Admin?</string>
    <string name="is_customer">Customer?</string>
    <string name="is_skip">Skip?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="what_s_your_skin_type">What\'s your skin type?</string>
    <string name="which_finish_fits_your_look">Which finish fits your look?</string>
    <string name="which_shade_family_best_fits_your_skin_tone">Which shade family best fits your skin tone?</string>
    <string name="address">Address</string>
    <string name="product">Product</string>
    <string name="customer">Customer</string>
    <string name="invoice">Invoice</string>
    <string name="phone">Phone</string>
    <string name="foundation">Foundation</string>
    <string name="bronzer">Bronzer</string>
    <string name="primer">Primer</string>
    <string name="powder">Powder</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="shop_now">Shop Now</string>
    <string name="order">Order</string>
    <string name="register_and_order">Register and Order</string>
    <string name="item_list">Item List</string>
    <string name="total">Total</string>
</resources>
