<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register_and_order"
            android:textSize="26sp" />

        <LinearLayout style="@style/FormFieldLayout">

            <TextView
                style="@style/FormLeftLabel"
                android:text="@string/name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_name"
                style="@style/FormRightFieldWithoutBackground"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout style="@style/FormFieldLayout">

            <TextView
                style="@style/FormLeftLabel"
                android:text="@string/address" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_address"
                style="@style/FormRightFieldWithoutBackground"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout style="@style/FormFieldLayout">

            <TextView
                style="@style/FormLeftLabel"
                android:text="@string/phone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_phone"
                style="@style/FormRightFieldWithoutBackground"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout style="@style/FormFieldLayout">

            <TextView
                style="@style/FormLeftLabel"
                android:text="@string/email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                style="@style/FormRightFieldWithoutBackground"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded"
            android:onClick="registerAndOrder"
            android:text="@string/order" />

    </LinearLayout>

</ScrollView>