<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CustomerActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="26sp" />

    <include
        layout="@layout/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_foundation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/ic_launcher_foreground"
        android:gravity="center"
        android:onClick="goToSearchActivity"
        android:text="@string/foundation"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bronzer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/ic_launcher_foreground"
        android:gravity="center"
        android:onClick="goToSearchActivity"
        android:text="@string/bronzer"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_primer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/ic_launcher_foreground"
        android:gravity="center"
        android:onClick="goToSearchActivity"
        android:text="@string/primer"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_powder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/ic_launcher_foreground"
        android:gravity="center"
        android:onClick="goToSearchActivity"
        android:text="@string/powder"
        android:textSize="22sp" />

</LinearLayout>