<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.OrderDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_total">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/FormFieldLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FormLeftLabel"
                    android:text="@string/invoice" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_invoice_no"
                    style="@style/FormRightFieldWithBackground" />

            </LinearLayout>

            <LinearLayout style="@style/FormFieldLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FormLeftLabel"
                    android:text="@string/customer" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_customer_name"
                    style="@style/FormRightFieldWithBackground" />

            </LinearLayout>

            <LinearLayout style="@style/FormFieldLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FormLeftLabel"
                    android:text="@string/address" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_customer_address"
                    style="@style/FormRightFieldWithBackground" />

            </LinearLayout>

            <LinearLayout style="@style/FormFieldLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FormLeftLabel"
                    android:text="@string/phone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_customer_phone"
                    style="@style/FormRightFieldWithBackground" />

            </LinearLayout>

            <LinearLayout style="@style/FormFieldLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FormLeftLabel"
                    android:text="@string/email" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_customer_email"
                    style="@style/FormRightFieldWithBackground" />

            </LinearLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/item_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_order_item_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="400dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/product_list_item" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_total"
        style="@style/FormFieldLayout"
        android:layout_above="@+id/btn_invoice">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FormLeftLabel"
            android:text="@string/total" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total"
            style="@style/FormRightFieldWithBackground" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_invoice"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded"
        android:enabled="false"
        android:onClick="deleteOrder"
        android:text="@string/invoice"
        android:textAllCaps="false" />

</RelativeLayout>