<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AdminActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="26sp" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="goToProductList"
        android:text="@string/product_list"
        android:textAllCaps="false"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="goToOrderList"
        android:text="@string/order_list"
        android:textAllCaps="false"
        android:textSize="22sp" />

</LinearLayout>