<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@android:drawable/alert_dark_frame" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded"
        android:drawableStart="@drawable/ic_admin"
        android:drawableLeft="@drawable/ic_admin"
        android:drawablePadding="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_skip_login"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Skip?"
            android:textAllCaps="false"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>